<?xml version="1.0"?>
<package format="2">
  <name>lidar_transform_rqt</name>
  <version>0.0.1</version>
  <description>Rqt plugin for lidar transformation (Noetic)</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>laser_geometry</depend>
  <!-- qt_gui_cpp 是 rqt_gui_cpp 的底层依赖 -->
  <depend>qt_gui_cpp</depend> 

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>