<?xml version="1.0"?>
<package format="2">
  <name>rqt_vehicle_calib_cpp</name>
  <version>0.0.1</version>
  <description>C++ RQT plugin for vehicle calibration</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- Qt dependencies are handled by cmake, but declaring here is good practice -->

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>